adding in test code of V0.6 PCB

--- a/software/OpenPyroJet-Controller-Test/platformio.ini
+++ b/software/OpenPyroJet-Controller-Test/platformio.ini
@@ -18,6 +18,6 @@ upload_speed = 921600
 monitor_port = COM30
 monitor_speed = 115200
 lib_deps = 
-	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.3.0
 	fastled/FastLED@^3.5.0
 	igorantolic/Ai Esp32 Rotary Encoder@^1.4
+	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@4.2.1
